[i18n] final templates with the mustache tags

--- a/templates/sysconfig/ad-start.html
+++ b/templates/sysconfig/ad-start.html
@@ -1,46 +1,41 @@
 <p>
-	Zum Einrichten der Benutzerauthentifizierung über ein Active Directory wird neben der Adresse
-	des anzusprechenden Servers ein dedizierter Benutzer im AD benötigt, über welchen das AD angesprochen wird.
+	{{lang_adText1}}
 	<br>
-	Dieser Benutzer benötigt keine besonderen Rechte, Sie können diesem Benutzer zur Sicherheit auch die
-	Rechte zum Anmelden entziehen. Der Benutzer muss lediglich ausreichende Berechtigungen haben, um einen
-	LDAP-Bind am AD durchzuführen, und nach Benutzern zu suchen.
+	{{lang_adText2}}
 	<br>
-	Im Folgenden muss der <strong>Distinguished Name</strong> des Benutzers angegeben werden. Diesen können Sie ermitteln,
-	indem Sie das Kommandozeilenprogramm <strong>dsquery</strong> auf einem Domain Controller wie folgt aufrufen:
+	{{lang_adText3}}
 </p>
-<pre>dsquery user -name &quot;Benutzername&quot;</pre>
+<pre>dsquery user -name &quot;Username&quot;</pre>
 <p>
-	Nach Eingabe aller benötigten Daten wird im nächsten Schritt überprüft, ob die Kommunikation mit
-	dem AD möglich ist.
+	{{lang_adText4}}
 </p>
 
 <form role="form" method="post" action="?do=SysConfig&amp;action=addmodule&amp;step={{step}}">
 	<input type="hidden" name="token" value="{{token}}">
 	<div class="input-group">
-		<span class="input-group-addon slx-ga">Server</span>
+		<span class="input-group-addon slx-ga">Server    </span>
 		<input tabindex="1" name="server" value="{{server}}" type="text" class="form-control" placeholder="dc0.institution.example.com">
 		<span class="input-group-btn">
 			<a class="btn btn-default"><span class="glyphicon glyphicon-question-sign"></span></a>
 		</span>
 	</div>
 	<div class="input-group">
-		<span class="input-group-addon slx-ga">Suchbasis</span>
+		<span class="input-group-addon slx-ga">{{lang_searchBase}}</span>
 		<input tabindex="2" name="searchbase" value="{{searchbase}}" type="text" class="form-control" placeholder="dc=windows,dc=hs-beispiel,dc=de">
 		<span class="input-group-btn">
 			<a class="btn btn-default"><span class="glyphicon glyphicon-question-sign"></span></a>
 		</span>
 	</div>
 	<div class="input-group">
-		<span class="input-group-addon slx-ga">Bind DN</span>
+		<span class="input-group-addon slx-ga">{{lang_bindDN}}</span>
 		<input tabindex="3" name="binddn" value="{{binddn}}" type="text" class="form-control" placeholder="CN=bwlehrpool user,OU=Benutzer,OU=Gruppe XYZ,DC=windows,DC=hs-beispiel,DC=de">
 		<span class="input-group-btn">
 			<a class="btn btn-default"><span class="glyphicon glyphicon-question-sign"></span></a>
 		</span>
 	</div>
 	<div class="input-group">
-		<span class="input-group-addon slx-ga">Passwort</span>
-		<input tabindex="4" name="bindpw" value="{{bindpw}}" type="text" class="form-control" placeholder="Paswort von 'bwlehrpool user'">
+		<span class="input-group-addon slx-ga">{{lang_password}}</span>
+		<input tabindex="4" name="bindpw" value="{{bindpw}}" type="text" class="form-control" placeholder="{{lang_password}}">
 		<span class="input-group-btn">
 			<a class="btn btn-default"><span class="glyphicon glyphicon-question-sign"></span></a>
 		</span>
@@ -62,20 +57,17 @@
 <div class="modal fade" id="help-home" tabindex="-1" role="dialog">
 	<div class="modal-dialog">
 		<div class="modal-content">
-			<div class="modal-header">Benutzerverzeichnis</div>
+			<div class="modal-header">{{lang_userDirectory}}</div>
 			<div class="modal-body">
 				<p>
-					<b>Optionale Angabe</b>: Wenn die Clients für die Benutzer ein eigenes Verzeichnis
-					(Homeverzeichnis, Benutzerverzeichnis) von einem Server einbinden sollen, geben Sie
-					bitte hier das Format in <b>UNC-Notation</b> an, also z.B. <pre>\\fileserv.uni.example.com\users\%s</pre>
-					<b>%s</b> ist dabei ein Platzhalter für den Login-Namen des Benutzers.
+					{{lang_userDirectoryInfo1}} <pre>\\fileserv.uni.example.com\users\%s</pre>
+					{{lang_userDirectoryInfo2}}
 				</p>
 				<p>
-					Das Verzeichnis wird mit den gleichen Zugangsdaten eingebunden, die der Benutzer beim Login angibt.
-					(D.h. kein Kerberos Support o.ä.)
+					{{lang_userDirectoryInfo3}}
 				</p>
 			</div>
-			<div class="modal-footer"><a class="btn btn-primary" data-dismiss="modal">Schließen</a></div>
+			<div class="modal-footer"><a class="btn btn-primary" data-dismiss="modal">{{lang_close}}</a></div>
 		</div>
 	</div>
 </div>
