--- a/templates/sysconfig/custom-fileselect.html
+++ b/templates/sysconfig/custom-fileselect.html
@@ -6,7 +6,7 @@
 		<input type="text" name="title" class="form-control" placeholder="Mein Konfigurationsmodul" autofocus="autofocus">
 	</div>
 		<hr>
-	<p>Hier haben Sie die Möglichkeit, den Inhalt des Archivs noch einmal zu überprüfen.</p>
+	<p>{{lang_checkFileContent}}</p>
 	<table class="table table-bordered table-condensed">
 	{{#files}}
 		<tr>
