[i18n]separated jsons by template, and finished other php details

--- a/templates/page-remote-tgz-list.html
+++ b/templates/page-remote-tgz-list.html
@@ -1,5 +1,5 @@
 <ol class="breadcrumb">
-	<li><a href="?do=Main">Start</a></li>
+	<li><a href="?do=Main">Home</a></li>
 	<li><a href="?do=SysConfig">{{lang_systemConfiguration}}</a></li>
 	<li class="active">{{lang_centralConfiguration}}</li>
 </ol>
