[i18n] Added administration interface for the i18n system

--- a/templates/main-menu-login.html
+++ b/templates/main-menu-login.html
@@ -19,6 +19,7 @@
 						<li><a href="?do=SysConfig">{{lang_localization}}</a></li>
 						<li><a href="?do=MiniLinux">bwLehrpool Mini-Linux</a></li>
 						<li><a href="?do=BaseConfig">{{lang_configurationVariables}}</a></li>
+						<li><a href="?do=Admin">Admin</a></li>
 						<li class="divider"></li>
 						<li class="dropdown-header">{{lang_server}}</li>
 						<li><a href="?do=ServerSetup">{{lang_configurationBasic}}</a></li>
