[i18n] Altering JSONs through the web interface is now possible

--- a/templates/administration/_page.html
+++ b/templates/administration/_page.html
@@ -1,34 +1,40 @@
 <div class="container">
 	<div class="panel panel-default">
 		<div class="panel-heading">
-			Language Administration
+			{{lang_langAdministration}}
 		</div>
 		<div class="panel-body">
-			<table class="table table-hover">
-				<thead>
-					<tr>
-						<th>Template</th>
-						<th style='text-align:center;'>{{lang_german}}</th>
-						<th style='text-align:center;'>{{lang_english}}</th>
-						<th style='text-align:center;'>Português</th>
-					<tr>
-				</thead>
-				<tbody>
-					{{#table}}
-						<tr onclick="goTo('{{link}}');">
-							<td>{{template}}</td>
-							<td style='width:200px;text-align:center;'>{{de}}</td>
-							<td style='width:200px;text-align:center;'>{{en}}</td>
-							<td style='width:200px;text-align:center;'>{{pt}}</td>
-						</tr>
-					{{/table}}
-				</tbody>
-			</table>
+			<p>{{lang_adminInfo}}</p>
 		</div>
+		<ul class="list-group">
+			<a href="?do=Admin&page=messages" class="list-group-item active">{{lang_editMessages}}</a>
+		</ul>
+	</div>
+	<div class="panel panel-default">
+		<table class="table table-hover">
+			<thead>
+				<tr>
+					<th>Template</th>
+					<th style='text-align:center;'>{{lang_german}}</th>
+					<th style='text-align:center;'>{{lang_english}}</th>
+					<th style='text-align:center;'>{{lang_portuguese}}</th>
+				<tr>
+			</thead>
+			<tbody>
+				{{#table}}
+					<tr onclick="goTo('{{link}}');">
+						<td>{{template}}</td>
+						<td style='width:230px;text-align:center;'>{{de}}</td>
+						<td style='width:230px;text-align:center;'>{{en}}</td>
+						<td style='width:230px;text-align:center;'>{{pt}}</td>
+					</tr>
+				{{/table}}
+			</tbody>
+		</table>
 	</div>
 </div>
 <script>
 function goTo(link){
-	window.location.href = "?do=Admin&template=" + link;
+	window.location.href = "?do=Admin&page=templates&template=" + link;
 }
 </script>
