--- a/templates/administration/template.html
+++ b/templates/administration/template.html
@@ -4,34 +4,40 @@
 			{{template}}
 		</div>
 		<div class="panel-body">
-			<table class="table table-hover">
-				<thead>
-					<tr>
-						<th>Mustache Tag</th>
-						<th style='text-align:center;'>German JSON</th>
-						<th style='text-align:center;'>English JSON</th>
-						<th style='text-align:center;'>Portuguese JSON</th>
-					</tr>
-				</thead>
-				<tbody>
-					{{#tags}}
+			<p>{{lang_templateAdminHelp}}
+			<form action="?do=Admin" method="post">
+				<table class="table table-hover">
+					<thead>
 						<tr>
-							<td>{{tag}}</td>
-							<td style='width:250px;text-align:center;'>
-								<input type="text" class="form-control" placeholder="German TAG" value="{{de}}">
-							</td>
-							<td style='width:250px;text-align:center;'>
-								<input type="text" class="form-control" placeholder="English TAG" value="{{en}}">
-							</td>
-							<td style='width:250px;text-align:center;'>
-								<input type="text" class="form-control" placeholder="Portuguese TAG" value="{{pt}}">
-							</td>
+							<th>Mustache Tag</th>
+							<th style='text-align:center;'>{{lang_germanJSON}}</th>
+							<th style='text-align:center;'>{{lang_englishJSON}}</th>
+							<th style='text-align:center;'>{{lang_portugueseJSON}}</th>
 						</tr>
-					{{/tags}}
-				</tbody>
-			</table>
-			<a class="btn btn-primary" href='?do=Admin' >Back</a> 
-			<a class="btn btn-primary" href='#' >Update</a>
+					</thead>
+					<tbody>
+						{{#tags}}
+							<tr>
+								<td>{{tag}}</td>
+								<td style='width:250px;text-align:center;'>
+									<input type="text" class="form-control" placeholder="{{lang_germanTAG}}" value="{{de}}" name="lang-de-{{tag}}">
+								</td>
+								<td style='width:250px;text-align:center;'>
+									<input type="text" class="form-control" placeholder="{{lang_englishTAG}}" value="{{en}}" name="lang-en-{{tag}}">
+								</td>
+								<td style='width:250px;text-align:center;'>
+									<input type="text" class="form-control" placeholder="{{lang_portugueseTAG}}" value="{{pt}}" name="lang-pt-{{tag}}">
+								</td>
+							</tr>
+						{{/tags}}
+					</tbody>
+				</table>
+				<a class="btn btn-primary" href='?do=Admin' >{{lang_back}}</a> 
+				<input type="hidden" name="update" value="true">
+				<input type="hidden" name="path" value="{{path}}">
+				<input type="hidden" name="token" value="{{token}}">
+				<input type="submit" class="btn btn-primary" value="{{lang_update}}">
+			</form>
 		</div>
 	</div>
 </div>
