--- a/templates/main-menu-login.html
+++ b/templates/main-menu-login.html
@@ -32,9 +32,9 @@
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="lang/{{lang}}/flag.png"><b class="caret"></b></a>
 					<ul class="dropdown-menu">
 						<li class="dropdown-header">{{lang_language}}</li>
-						<li><a href="index.php?lang=de"><img src="lang/de/flag.png"> Deutsch</a></li>
-						<li><a href="index.php?lang=en"><img src="lang/en/flag.png"> English</a></li>
-						<li><a href="index.php?lang=pt"><img src="lang/pt/flag.png"> Português</a></li>
+						<li><a href="?lang=de&amp;url={{url}}"><img src="lang/de/flag.png"> Deutsch</a></li>
+						<li><a href="?lang=en&amp;url={{url}}"><img src="lang/en/flag.png"> English</a></li>
+						<li><a href="?lang=pt&amp;url={{url}}"><img src="lang/pt/flag.png"> Português</a></li>
 					</ul>
 				</li>
 			</ul>
