--- a/templates/translation/template.html
+++ b/templates/translation/template.html
@@ -4,8 +4,11 @@
 			{{template}}
 		</div>
 		<div class="panel-body">
-			<p>{{lang_templateAdminHelp}}
-			<form action="?do=Admin" method="post">
+			<p>{{lang_templateAdminHelp}}</p>
+			<div class="alert alert-info">
+				{{lang_templateHint}}
+			</div>
+			<form action="?do=Translation" method="post">
 				<table class="table table-hover">
 					<thead>
 						<tr>
@@ -30,7 +33,7 @@
 									<input type="text" class="form-control" placeholder="{{lang_portugueseTAG}}" value="{{pt}}" name="lang#pt#{{tag}}">
 								</td>
 								<td style='text-align:center;'>
-									<a class="btn btn-danger btn-xs" href="?do=Admin&template={{path}}&delete={{tag}}"><span class="glyphicon glyphicon-remove"></span> {{lang_deleteTAG}}</a>
+									<a class="btn btn-danger btn-xs" href="?do=Translation&template={{template}}&delete={{tag}}"><span class="glyphicon glyphicon-remove"></span> {{lang_deleteTAG}}</a>
 								</td>
 							</tr>
 						{{/tags}}
@@ -38,12 +41,12 @@
 						</tr>
 					</tbody>
 				</table>
-				<a class="btn btn-primary" href='?do=Admin' >{{lang_back}}</a>
+				<a class="btn btn-primary" href='?do=Translation' >{{lang_back}}</a>
 				<button class="btn btn-primary" type="button" onclick="addTag(true);" >{{lang_createTag}}</button> 
 				<input type="hidden" name="update" value="true">
-				<input type="hidden" name="path" value="{{path}}">
+				<input type="hidden" name="path" value="{{template}}">
 				<input type="hidden" name="token" value="{{token}}">
-				<input type="submit" class="btn btn-primary" value="{{lang_update}}">
+				<input type="submit" class="btn btn-primary" value="{{lang_save}}">
 			</form>
 		</div>
 	</div>
