Fix lang-tag in sysconfig template

--- a/templates/sysconfig/_page.html
+++ b/templates/sysconfig/_page.html
@@ -27,7 +27,7 @@
 							{{/current}}
 						</td>
 						<td>
-							<button class="btn btn-danger btn-xs" name="del" value="{{configid}}"><span class="glyphicon glyphicon-trash"></span> {{lang_close}}</button>
+							<button class="btn btn-danger btn-xs" name="del" value="{{configid}}"><span class="glyphicon glyphicon-trash"></span> {{lang_delete}}</button>
 						</td>
 					</tr>
 				{{/configs}}
