--- a/templates/translation/template.html
+++ b/templates/translation/template.html
@@ -13,26 +13,22 @@
 					<thead>
 						<tr>
 							<th>Mustache Tag</th>
-							<th style='width:250px;text-align:center;'>{{lang_germanJSON}}</th>
-							<th style='width:250px;text-align:center;'>{{lang_englishJSON}}</th>
-							<th style='width:250px;text-align:center;'>{{lang_portugueseJSON}}</th>
-							<th style='width:100px;text-align:center;'></th>
+							{{#langs}}
+							<th>{{lang}}</th>
+							{{/langs}}
+							<th></th>
 						</tr>
 					</thead>
 					<tbody>
 						{{#tags}}
 							<tr class="{{class}}" id="{{tag}}">
 								<td>{{tag}}</td>
-								<td style='text-align:center;'>
-									<input type="text" class="form-control" placeholder="{{lang_germanTAG}}" value="{{de}}" name="lang#de#{{tag}}">
+								{{#langs}}
+								<td style="text-align:center">
+									<input type="text" class="form-control" placeholder="{{placeholder}}" value="{{translation}}" name="lang#{{lang}}#{{tag}}">
 								</td>
-								<td style='text-align:center;'>
-									<input type="text" class="form-control" placeholder="{{lang_englishTAG}}" value="{{en}}" name="lang#en#{{tag}}">
-								</td>
-								<td style='text-align:center;'>
-									<input type="text" class="form-control" placeholder="{{lang_portugueseTAG}}" value="{{pt}}" name="lang#pt#{{tag}}">
-								</td>
-								<td style='text-align:center;'>
+								{{/langs}}
+								<td style="text-align:center">
 									<a class="btn btn-danger btn-xs" href="?do=Translation&template={{template}}&delete={{tag}}"><span class="glyphicon glyphicon-remove"></span> {{lang_deleteTAG}}</a>
 								</td>
 							</tr>
@@ -42,7 +38,7 @@
 					</tbody>
 				</table>
 				<a class="btn btn-primary" href='?do=Translation' >{{lang_back}}</a>
-				<button class="btn btn-primary" type="button" onclick="addTag(true);" >{{lang_createTag}}</button> 
+				<button class="btn btn-primary" type="button" onclick="addTag()" >{{lang_createTag}}</button> 
 				<input type="hidden" name="update" value="true">
 				<input type="hidden" name="path" value="{{template}}">
 				<input type="hidden" name="token" value="{{token}}">
