--- a/templates/main-menu-logout.html
+++ b/templates/main-menu-logout.html
@@ -29,12 +29,12 @@
 				<li><a href="?do=News">{{lang_news}}</a></li>
 				<li><a href="?do=SystemStatus">Status</a></li>
 				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="lang/{{lang}}/flag.png"><b class="caret"></b></a>
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="lang/{{current_lang}}/flag.png"><b class="caret"></b></a>
 					<ul class="dropdown-menu">
 						<li class="dropdown-header">{{lang_language}}</li>
-						<li><a href="?lang=de&amp;url={{url}}"><img src="lang/de/flag.png"> Deutsch</a></li>
-						<li><a href="?lang=en&amp;url={{url}}"><img src="lang/en/flag.png"> English</a></li>
-						<li><a href="?lang=pt&amp;url={{url}}"><img src="lang/pt/flag.png"> Português</a></li>
+						{{#langs}}
+						<li><a href="?lang={{cc}}&amp;url={{url}}"><img src="lang/{{cc}}/flag.png" alt="{{name}}"> {{name}}</a></li>
+						{{/langs}}
 					</ul>
 				</li>
 			</ul>
