Added eventlog class, improved db-update machanism.
A warning will be shown in the main menu bar if the database schema needs to be updated.

--- a/templates/main-menu-login.html
+++ b/templates/main-menu-login.html
@@ -37,6 +37,9 @@
 						{{/langs}}
 					</ul>
 				</li>
+				{{#dbupdate}}
+				<li><a href="api.php?do=update"><span class="slx-text-red"><span class="glyphicon glyphicon-exclamation-sign"></span> Update</span></a></li>
+				{{/dbupdate}}
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="?do=Session&amp;action=login">{{lang_login}}</a></li>
