--- a/style/default.css
+++ b/style/default.css
@@ -129,8 +129,12 @@ body {
   animation-iteration-count: infinite;
   animation-timing-function: linear;
 }
- 
+
 @keyframes rotateThis {
   from { transform: scale( 1 ) rotate( 0deg );   }
   to   { transform: scale( 1 ) rotate( 360deg ); }
+}
+
+.slx-text-red {
+  color: red;
 }
