--- a/templates/page-adduser.html
+++ b/templates/page-adduser.html
@@ -2,16 +2,16 @@
 	<form class="form-adduser" action="?do=AddUser" method="post">
 		<h2 class="form-signin-heading">{{lang_createUser}}</h2>
 		<div class="row">
-			<div class="col-md-4">{{lang_username}}</div>
+			<div class="col-md-4">{{lang_username}} *</div>
 			<div class="col-md-4"><input type="text" name="user" value="{{user}}" class="form-control" placeholder="{{lang_username}}" autofocus></div>
 		</div>
 		<div class="row">
-			<div class="col-md-4">{{lang_password}}</div>
+			<div class="col-md-4">{{lang_password}} *</div>
 			<div class="col-md-4"><input type="password" name="pass1" class="form-control" placeholder="{{lang_password}}"></div>
 			<div class="col-md-4"><input type="password" name="pass2" class="form-control" placeholder="{{lang_confirmation}}"></div>
 		</div>
 		<div class="row">
-			<div class="col-md-4">{{lang_fullName}}</div>
+			<div class="col-md-4">{{lang_fullName}} *</div>
 			<div class="col-md-4"><input type="text" name="fullname" value="{{fullname}}" class="form-control" placeholder="{{lang_fullName}}"></div>
 		</div>
 		<div class="row">
