Big load of changes
- Added callback functionality for taskmanager tasks. You can launch
  a task and define a callback function to be run when the task finished.
  This requires activating the cronjob
- Added cron functionality: Add cronjob that calls the cron api every 5
  minutes to use it. (See cron.inc.php)
- Added eventlog
- Added missing translations
- Merged main-menu-login and main-menu-logout

--- a/style/default.css
+++ b/style/default.css
@@ -1,6 +1,10 @@
 body {
-	padding-top: 70px;
-	padding-bottom: 10px;
+  padding-top: 70px;
+  padding-bottom: 10px;
+}
+
+.panel-heading, .panel-footer, .jumbotron, pre, .input-group-addon {
+  background-image: url('bg.png');
 }
 
 .form-signin {
@@ -136,5 +140,5 @@ body {
 }
 
 .slx-text-red {
-  color: red;
+  color: #ff0;
 }
