--- a/templates/eventlog/_page.html
+++ b/templates/eventlog/_page.html
@@ -1,33 +1,18 @@
 <div class="container">
-	<h1>{{lang_clientLog}}</h1>
-	<form method="post" action="?do=SysLog">
-		<input type="hidden" name="token" value="{{token}}">
-		<div class="input-group">
-			<span class="input-group-addon">{{lang_filter}}</span>
-			<input id="filterstring" type="text" placeholder="id" value="{{filter}}" name="filter" data-role="tagsinput" />
-			<span class="input-group-addon">
-				<input type="checkbox" name="not" {{#not}}checked="checked"{{/not}}> {{lang_not}}
-			</span>
-			<span class="input-group-btn">
-				<button class="btn btn-default" type="submit">{{lang_go}}</button>
-			</span>
-		</div>
-	</form>
+	<h1>{{lang_eventLog}}</h1>
 	{{{pagenav}}}
 	<table class="table table-striped table-condensed">
 		<thead>
 			<th width="1"></th>
 			<th>{{lang_when}}</th>
-			<th>{{lang_client}}</th>
 			<th>{{lang_event}}</th>
 			<th width="1">{{lang_details}}</th>
 		</thead>
 		<tbody>
 		{{#list}}
 			<tr>
-				<td><span class="glyphicon glyphicon-off" title="{{logtypeid}}" onclick="$('#filterstring').tagsinput('add', '{{logtypeid}}')"></span></td>
+				<td><span class="glyphicon glyphicon-{{icon}}" title="{{logtypeid}}"></span></td>
 				<td class="text-right" nowrap="nowrap">{{date}}</td>
-				<td>{{clientip}}</td>
 				<td>{{description}}</td>
 				<td>{{#extra}}
 					<a class="btn btn-default btn-xs pull-left" onclick="$('#details-body').html($('#extra-{{logid}}').html())" data-toggle="modal" data-target="#myModal">&raquo;</a>
@@ -56,5 +41,3 @@
     </div>
   </div>
 </div>
-
-
