--- a/templates/main-menu.html
+++ b/templates/main-menu.html
@@ -38,11 +38,19 @@
 					</ul>
 				</li>
 				{{#dbupdate}}
-				<li><a href="api.php?do=update"><span class="slx-text-red"><span class="glyphicon glyphicon-exclamation-sign"></span> Update</span></a></li>
+				<li><a href="api.php?do=update"><span class="slx-text-red badge"><span class="glyphicon glyphicon-exclamation-sign"></span> DB-Update</span></a></li>
 				{{/dbupdate}}
+				{{#warning}}
+				<li><a href="?do=EventLog"><span class="slx-text-red badge"><span class="glyphicon glyphicon-exclamation-sign"></span> {{lang_warning}}</span></a></li>
+				{{/warning}}
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
+				{{#user}}
+				<li><a href="?do=Session&amp;action=logout&amp;token={{{token}}}"><b>{{user}}</b> ({{lang_logout}})</a></li>
+				{{/user}}
+				{{^user}}
 				<li><a href="?do=Session&amp;action=login">{{lang_login}}</a></li>
+				{{/user}}
 			</ul>
 		</div>
 	</div>
