--- a/templates/main-menu.html
+++ b/templates/main-menu.html
@@ -11,7 +11,6 @@
 		</div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
-				<li><a href="?do=SysLog">{{lang_clientLog}}</a></li>
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">{{lang_settings}}<b class="caret"></b></a>
 					<ul class="dropdown-menu">
@@ -27,7 +26,14 @@
 					</ul>
 				</li>
 				<li><a href="?do=News">{{lang_news}}</a></li>
-				<li><a href="?do=SystemStatus">Status</a></li>
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">{{lang_status}}<b class="caret"></b></a>
+					<ul class="dropdown-menu">
+						<li><a href="?do=SystemStatus">{{lang_serverStatus}}</a></li>
+						<li><a href="?do=SysLog">{{lang_clientLog}}</a></li>
+						<li><a href="?do=EventLog">{{lang_eventLog}}</a></li>
+					</ul>
+				</li>
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="lang/{{current_lang}}/flag.png"><b class="caret"></b></a>
 					<ul class="dropdown-menu">
