--- a/templates/main-menu.html
+++ b/templates/main-menu.html
@@ -44,10 +44,10 @@
 					</ul>
 				</li>
 				{{#dbupdate}}
-				<li><a href="api.php?do=update"><span class="slx-text-red badge"><span class="glyphicon glyphicon-exclamation-sign"></span> DB-Update</span></a></li>
+				<li><a href="api.php?do=update"><span class="slx-warning-badge badge"><span class="glyphicon glyphicon-exclamation-sign"></span> DB-Update</span></a></li>
 				{{/dbupdate}}
 				{{#warning}}
-				<li><a href="?do=EventLog"><span class="slx-text-red badge"><span class="glyphicon glyphicon-exclamation-sign"></span> {{lang_warning}}</span></a></li>
+				<li><a href="?do=EventLog"><span class="slx-warning-badge badge"><span class="glyphicon glyphicon-exclamation-sign"></span> {{lang_warning}}</span></a></li>
 				{{/warning}}
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
